--- a/06-3_column_preview_card_component/css/style.css
+++ b/06-3_column_preview_card_component/css/style.css
@@ -4,94 +4,124 @@
 
 :root {
     /* Typography */
-    --lexendDeca: 'Lexend Deca', sans-serif;
-    --bigShouldersDisplay: 'Big Shoulders Display', cursive;
-    --fontWeightMedium: 400;
-    --fontWeightBold: 700;
-    --fontSize12: 0.75rem;
-    --fontSize14: 0.875rem;
-    --fontSize16: 1rem;
-    --fontSize18: 1.125rem;
-    --fontSize20: 1.25rem;
-    --fontSize24: 1.5rem;
-    --fontSize32: 2rem;
-    --fontSize48: 3rem;
+    --font-lexend: 'Lexend Deca', sans-serif;
+    --font-big-shoulder: 'Big Shoulders Display', cursive;
+    --font-weight-medium: 400;
+    --font-weight-bold: 700;
+    --font-size-300: 3rem;
+    --font-size-200: 2rem;
+    --font-size-100: 1rem;
 
     /* Colors */
-    --brightOrange: hsl(31, 77%, 52%);
-    --darkCyan: hsl(184, 100%, 22%);
-    --veryDarkCyan: hsl(179, 100%, 13%);
-    --transparentWhite:  hsla(0, 0%, 100%, 0.75);
-    --veryLightGray:  hsl(0, 0%, 95%); 
-    
+    --bright-orange: hsl(31, 77%, 52%);
+    --dark-cyan: hsl(184, 100%, 22%);
+    --very-dark-cyan: hsl(179, 100%, 13%);
+    --transparent-white:  hsla(0, 0%, 100%, 0.75);
+    --very-light-gray:  hsl(0, 0%, 95%);
 }
 
-/* Spacing-System (in pixels) ->  2px / 4px / 8px / 12px / 16px / 24px / 32px /    64px / 80px / 96px / 128px */
-/* Font sizes (in pixels) -> 10px / 12px / 14px / 16px / 18px / 20px / 24px / 30px / 36px / 44px / 52px / 62px / 74px / 86px /  */
-
+/* CSS Reset*/
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+img {
+    display: block;
+    max-width: 100%;
+}
+
+/* Utility Classes*/
+.container {
+    max-width: 65rem;
+    padding-inline: 2rem;
+}
+
+@media (max-width: 50rem) {
+    .container {
+        padding-inline: 1rem;
+    }
+}
+
+.grid {
+    display: grid;
+}
+
+.grid--1-columns {
+    grid-template-columns: repeat(1, 1fr);
+}
+
+.grid--3-columns {
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.flex {
+    display: flex;
+    gap: 2.4rem;
+}
+
+/* Body Styling*/
 body {
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--veryLightGray);
+    background-color: var(--very-light-gray);
 }
 
-.preview-card-component {
-    padding: 3rem 0;
+
+/* Card Section*/
+.card-section {
+    padding: 1rem 0;
 }
 
-.column {
+.card {
     display: flex;
     flex-direction: column;
     gap: 2rem;
     padding: 2.5rem 3rem;
 }
 
-.icon {
-    display: block;
-    max-width: 100%;
+.card__title {
+    font-family: var(--font-big-shoulder);
+    font-weight: var(--font-weight-bold);
+    color: var(--very-light-gray);
+    text-transform: uppercase;
+    font-size: var(--font-size-200);
+    margin-bottom: 1.5rem;
 }
 
-.icon.active{
-    transform: translateX(250%);
-}
 
-.text {
-    font-family: var(--lexendDeca);
-    color: var(--transparentWhite);
-    font-size: var(--fontSize16);
-    font-weight: var(--fontWeightMedium);
+.card__text {
+    font-family: var(--font-lexend);
+    color: var(--transparent-white);
+    font-size: var(--font-size-100);
+    font-weight: var(--font-weight-medium);
     line-height: 1.6;
 }
 
-.column:nth-child(1) {
-    background-color: var(--brightOrange);
+.card--sedan {
+    background-color: var(--bright-orange);
     border-top-left-radius: 1rem;
     border-bottom-left-radius: 1rem;
 }
 
-.column:nth-child(2) {
-    background-color: var(--darkCyan);
+.card--suv {
+    background-color: var(--dark-cyan);
 }
 
-.column:nth-child(3) {
-    background-color: var(--veryDarkCyan);
+.card--luxury {
+    background-color: var(--very-dark-cyan);
     border-top-right-radius: 1rem;
     border-bottom-right-radius: 1rem;
 }
 
 
-.cta {
-    background-color: var(--veryLightGray);
-    font-family: var(--lexendDeca);
-    border: 2px solid var(--veryLightGray);
+.card__btn {
+    background-color: var(--very-light-gray);
+    font-family: var(--font-lexend);
+    border: 2px solid var(--very-light-gray);
     display: block;
     align-self: flex-start;
     padding: 0.75rem 1.5rem;
@@ -101,31 +131,31 @@ body {
     cursor: pointer;
 }
 
-.column:nth-child(1) .cta {
-    color: var(--brightOrange);
+.card__btn--sedan {
+    color: var(--bright-orange);
 }
 
-.column:nth-child(1) .cta:hover {
-    background-color: var(--brightOrange);
-    color: var(--veryLightGray);
+.card__btn--sedan:hover {
+    background-color: var(--bright-orange);
+    color: var(--very-light-gray);
 }
 
-.column:nth-child(2) .cta {
-    color: var(--darkCyan);
+.card__btn--suv {
+    color: var(--dark-cyan);
 }
 
-.column:nth-child(2) .cta:hover {
-    background-color: var(--darkCyan);
-    color: var(--veryLightGray);
+.card__btn--suv:hover {
+    background-color: var(--dark-cyan);
+    color: var(--very-light-gray);
 }
 
-.column:nth-child(3) .cta {
-    color: var(--veryDarkCyan);
+.card__btn--luxury {
+    color: var(--very-dark-cyan);
 }
 
-.column:nth-child(3) .cta:hover {
-    background-color: var(--veryDarkCyan);
-    color: var(--veryLightGray);
+.card__btn--luxury:hover {
+    background-color: var(--very-dark-cyan);
+    color: var(--very-light-gray);
 }
 
 
@@ -135,13 +165,17 @@ body {
         grid-template-columns: 1fr !important;
     }
 
-    .column:nth-child(1) {
+    .card--sedan {
         border-bottom-left-radius: 0;
         border-top-right-radius: 1rem;
     }
 
-    .column:nth-child(3) {
+    .card--luxury {
         border-top-right-radius: 0;
         border-bottom-left-radius: 1rem;
+    }
+
+    .card__btn {
+        margin-top: 0;
     }
 }
