--- a/18_order-summary-component/scss/components/_card.scss
+++ b/18_order-summary-component/scss/components/_card.scss
@@ -1,3 +1,7 @@
+.card-section {
+  padding: 1rem 0;
+}
+
 .card {
   background-color: white;
   text-align: center;
@@ -6,11 +10,11 @@
   overflow: hidden;
   margin-inline: 1rem;
 
-  &__content {
-    padding: 1rem 1rem;
+  &__description {
+    padding: 1.75rem 1rem;
   }
 
-  &__content > * + * {
+  &__description > * + * {
     margin-top: 1.25rem;
   }
 
@@ -96,7 +100,7 @@
   }
 
   @media (min-width: 48em) {
-    &__content {
+    &__description {
       padding: 2rem 1.5rem;
     }
 
